{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 17,
  "lineage": "0f19cb5d-3449-8ff5-cb54-6e99dcc1899c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "urotaxijavaserverec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f918f7e67a3323f0",
            "arn": "arn:aws:ec2:ap-south-1:710271913789:instance/i-0c9b3b89a89548745",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9b3b89a89548745",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "urotaxikp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098ed1ab2ad8a0c31",
            "private_dns": "ip-10-1-1-65.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.65",
            "public_ip": "3.7.252.106",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05683e93d318314f4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089858332a02cb350",
            "tags": {
              "Name": "urotaxijavaserverec2"
            },
            "tags_all": {
              "Name": "urotaxijavaserverec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd67f7afb26473e9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.urotaxikp",
            "aws_security_group.urotaxiec2sg",
            "aws_subnet.urotaxipubsn",
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "urotaxiigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710271913789:internet-gateway/igw-0a80520a939c96aa6",
            "id": "igw-0a80520a939c96aa6",
            "owner_id": "710271913789",
            "region": "ap-south-1",
            "tags": {
              "Name": "urotaxiigw"
            },
            "tags_all": {
              "Name": "urotaxiigw"
            },
            "vpc_id": "vpc-08f107d43a338fec2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "urotaxiigwrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710271913789:route-table/rtb-0e0e87b4631b0e075",
            "id": "rtb-0e0e87b4631b0e075",
            "owner_id": "710271913789",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a80520a939c96aa6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08f107d43a338fec2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.urotaxiigw",
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "urotaxiigwrtasso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a6ebca86ce0b5f",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e0e87b4631b0e075",
            "subnet_id": "subnet-089858332a02cb350"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.urotaxiigw",
            "aws_route_table.urotaxiigwrt",
            "aws_subnet.urotaxipubsn",
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "urotaxiec2sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710271913789:security-group/sg-0bd67f7afb26473e9",
            "description": "allow ssh access to urotaxi ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd67f7afb26473e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "urotaxiec2sg",
            "name_prefix": "",
            "owner_id": "710271913789",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "urotaxiec2sg"
            },
            "tags_all": {
              "Name": "urotaxiec2sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f107d43a338fec2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "urotaxipubsn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710271913789:subnet/subnet-089858332a02cb350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089858332a02cb350",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "710271913789",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "urotaxipubsn"
            },
            "tags_all": {
              "Name": "urotaxipubsn"
            },
            "vpc_id": "vpc-08f107d43a338fec2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "urotaxivpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710271913789:vpc/vpc-08f107d43a338fec2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07b464a5c91a31ede",
            "default_route_table_id": "rtb-04be4d3af89ec1417",
            "default_security_group_id": "sg-0cafbe9e6247959f9",
            "dhcp_options_id": "dopt-0f8e0262f12c84f8a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f107d43a338fec2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04be4d3af89ec1417",
            "owner_id": "710271913789",
            "region": "ap-south-1",
            "tags": {
              "Name": "urotaxivpc"
            },
            "tags_all": {
              "Name": "urotaxivpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "urotaxiec2sgegressallowany",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710271913789:security-group-rule/sgr-0c8d780e5173208d8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0c8d780e5173208d8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0bd67f7afb26473e9",
            "security_group_rule_id": "sgr-0c8d780e5173208d8",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.urotaxiec2sg",
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "urotaxiec2sgallowssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:710271913789:security-group-rule/sgr-0fb66773488c18f1b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0fb66773488c18f1b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0bd67f7afb26473e9",
            "security_group_rule_id": "sgr-0fb66773488c18f1b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.urotaxiec2sg",
            "aws_vpc.urotaxivpc"
          ]
        }
      ]
    }
  ]
}